--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -41,9 +44,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation files('libs/spotify-app-remote-release-0.7.2.aar')
+    implementation files('libs/spotify-app-remote-release-0.7.2.aar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //spotify
+    implementation 'com.spotify.android:auth:1.2.5'
+
+    //gson
+    implementation "com.google.code.gson:gson:2.9.0"
 
     //hilt
     implementation "com.google.dagger:hilt-android:2.40.5"
@@ -66,7 +77,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
-    apply plugin: 'kotlin-android-extensions'
 
+//    implementation files('libs/spotify-app-remote-release-0.7.2.aar')
+//    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
+//    implementation 'com.android.volley:volley:1.1.1'
 
 }
